Fix layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,11 @@
 	width: 100%;
 	height: 100%;
 }
+
+#__next > div {
+	height: 100%;
+}
+
 * {
 	scroll-behavior: smooth;
   }
